--- a/mods/moreblocks/mod.conf
+++ b/mods/moreblocks/mod.conf
@@ -1,8 +1,4 @@
 name = moreblocks
 description = Adds various miscellaneous blocks to the game.
 depends = default
-optional_depends = intllib,stairs,farming,wool,basic_materials
-min_minetest_version = 5.0.0
-release = 8247
-author = Calinou
-title = More Blocks
+optional_depends = stairs,farming,wool,basic_materials
